<?xml version="1.0"?>
<package>
  <name>br_swarm_rover</name>
  <version>0.0.0</version>
  <description>The br_swarm_rover package</description>

  <maintainer email="berkeley@todo.todo">berkeley</maintainer>

  <license>LGPLv3</license>
  
  <!-- <url type="website">http://ros.org/wiki/br_swarm_rover</url> -->

  <!-- Example: -->
  <author email="luisbill@gmail.com">Luis "Pototo" Bill</author>
  <author email="berkeley@robotie.com">John "Berkeley" Martinez</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <!-- Use this lines to compile the message file created: -->
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
 <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

 </export>
</package>
